resource/css/icon.css
/* ... */
.invert {
	filter: invert(1);
}

div[role="navigation"] > ul > li {
	overflow: hidden;
}

@media (prefers-color-scheme: dark) {
	.vh-icon-question {
		filter: invert(1);
	}

	.vh-icon-request {
		filter: invert(1);
	}
}

.vh-icon-16 {
	display: inline-block;
	width: 16px;
	height: 16px;
}
.vh-icon-32 {
	display: inline-block;
	width: 32px;
	height: 32px;
}
.vh-switch-32 {
	display: inline-block;
	width: 32px;
	height: 18px;
	background-position-y: -7px;
}

.vh-button-icon {
	padding-left: 25px;
	background-size: 15px;
	background-position-x: 5px;
	background-position-y: center;
}

